--- a/src/components/TopBar/TopBar.module.css
+++ b/src/components/TopBar/TopBar.module.css
@@ -2,7 +2,32 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  align-content: center;
   width: 100vw;
-  height: 40px;
+  height: 2.5em;
   background-color: #655cf3;
+  padding: 0;
+}
+
+.logo {
+  font-family: "Damion", cursive;
+  color: white;
+  font-size: 1.5em;
+  margin: 0 0 0.15em 2em;
+}
+
+.homelink {
+  text-decoration: none;
+  color: white;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 1.2em;
+  color: white;
+  margin: 2em;
+  width: 4em;
 }
