--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,19 @@ body {
   }
 }
 
+.error-message {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.offscreen {
+  position: absolute;
+  left: -9999px;
+}
+
 .line {
   display: inline-block;
 }
