--- a/src/components/TopBar/TopBar.module.css
+++ b/src/components/TopBar/TopBar.module.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
   height: 2.5em;
   background-color: #655cf3;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -13,9 +14,10 @@
   color: white;
   font-size: 1.5em;
   margin: 0.1em 0 0.15em 2em;
+  box-sizing: border-box;
 }
 
-.homelink {
+.topbarButton {
   text-decoration: none;
   color: white;
 }
@@ -28,4 +30,5 @@
   color: white;
   width: 4em;
   margin: 0.45em 2em 0.15em 0;
+  box-sizing: border-box;
 }
