--- a/src/components/SearchContainer/SearchContainer.module.css
+++ b/src/components/SearchContainer/SearchContainer.module.css
@@ -1,3 +1,27 @@
+.buttonWrapper {
+  display: flex;
+  flex-direction: row;
+  margin: 1.5em 0 1.5em 0;
+}
+
+.filterButton {
+  background-color: white;
+  color: grey;
+  border: var(--violet) 1px solid;
+  padding: 0.4em;
+  font: inherit;
+  cursor: pointer;
+  outline: var(--violet);
+  border-radius: 10pt;
+  margin-right: 0.5em;
+  transition-duration: 0.4s;
+}
+
+.filterButton:hover {
+  color: white;
+  background-color: var(--violet);
+}
+
 .resultWrapper {
   width: 100%;
   display: flex;
@@ -10,7 +34,5 @@
 }
 
 .resultCard {
-  margin-left: 5px;
-  margin-right: 5px;
   flex: 1 1 200px;
 }
