logout function at account page

--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,10 @@ body {
   position: relative;
   bottom: -10px;
 }
+
+.flexGrow {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
