--- a/src/components/SearchContainer/SearchContainer.module.css
+++ b/src/components/SearchContainer/SearchContainer.module.css
@@ -30,7 +30,8 @@
   margin: 0 auto;
   grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   grid-auto-rows: minmax(180px, auto);
-  gap: 0.5em;
+  row-gap: 3em;
+  column-gap: 0.5em;
 }
 
 .resultCard {
