--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,14 @@ body {
   justify-content: flex-start;
   align-items: flex-end;
 }
+
+.transparency {
+  background-color: rgba(0, 0, 0, 0.253);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  overflow-y: auto;
+}
