--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -10,6 +10,35 @@
   background-color: lightgrey;
 }
 
+.tripCardImage {
+  width: 100%;
+  height: 88%;
+  background-color: lightgrey;
+  text-align: left;
+  box-sizing: border-box;
+  padding: 4em 0 4em 1em;
+  font-size: 1.2em;
+  font-weight: bolder;
+  color: white;
+  background-size: contain;
+  background-repeat: no-repeat;
+  filter: grayscale(60%);
+}
+
+.tripCardImagePic {
+  width: 100%;
+  height: 88%;
+  text-align: left;
+  box-sizing: border-box;
+  padding: 4em 0 4em 1em;
+  font-size: 1.2em;
+  font-weight: bolder;
+  color: white;
+  background-size: contain;
+  background-repeat: no-repeat;
+  filter: grayscale(60%);
+}
+
 .cardData {
   display: flex;
   flex-direction: row;
